[package]
name = "superman"
version = "21.1.3"
authors = ["FeÌlix Saparelli <felix@passcod.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
color-eyre = "0.5.11"
deku = "0.12.3"
hostname = "0.3.1"
uuid = { version = "0.8.2", features = ["v4"] }
futures = "0.3.15"
log = "0.4.14"
stderrlog = "0.5.1"
structopt = "0.3.21"

[profile.dev.package.backtrace]
opt-level = 3
