[package]
name = "superman"
version = "21.1.3"
authors = ["Félix Saparelli <felix@passcod.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
color-eyre = "0.5.11"
deku = "0.12.3"
hostname = "0.3.1"
futures = "0.3.15"
fuze = "2.0.0"
log = "0.4.14"
stderrlog = "0.5.1"
structopt = "0.3.21"
hex = "0.4.3"
dashmap = "4.0.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

[profile.dev.package.backtrace]
opt-level = 3

[workspace]
members = ["fuze"]
